Update stylesheet and script paths in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>Scroll UFO Timeline (jQuery)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://public.codepenassets.com/css/normalize-5.0.0.min.css">
-  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
     
 <body>
@@ -215,7 +215,8 @@
     </div>
   </section>
 </article>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script><script  src="./script.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+	<script src="./js/scripts.js"></script>
 
   </body>
   
